# Multifractal-Voice-Analysis-for-Detection-of-Vocal-Pathologies

./: .gitignore  README.md  main.py  pyproject.toml
docs/: baseline_results.md  ppt_content.txt  report.md
src/: config.py
src/data/: extract.py  extract_data.py  preprocess.py  sanity_check.py
src/features/: baseline_praat.py  higuchi_fd.py  merge_classic_features.py  merge_fd_features.py  merge_fd_mfdfa_features.py  merge_features.py  merge_fractal_features.py  merge_mfdfa_features.py  mfcc.py  mfdfa.py  praat_features.py  wavelet_fd.py
src/models/: baseline_classifier.py  classic_classifier.py  fd_classifier.py  fd_mfdfa_classifier.py  mfdfa_classifier.py  multiclass_classifier.py
src/utils/: config.py  logger.py
src/visualization/: plot_baseline_features.py  plot_class_distribution.py  plot_higuchi_fd.py  plot_mfcc_heatmap.py  plot_mfdfa.py  plot_singularity_spectrum.py  plot_wavelet_fd.py
