[project]
name = "multifractal-voicepathology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nspfile>=0.2.0",
    "pandas>=2.3.3",
    "praat-parselmouth>=0.4.7",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
